# Android_back

./: .gitmodules  CMakeLists.txt  README.md
src/: main.cpp
task/: Server.py  ServerPC.cpp
